feat(access): T-ADMIN-029 公告状态与受众生命周期闭合
F010 修复，U007 四项拍板（registry 2026-09-23 两行）：
- typed IDs 一次性切换零兼容层：targetType(ALL/USER)+targetUserIds List<Long>，
  JSONB 数字数组落库（旧逗号串写 JSONB 机制性失败消除）
- 状态机对齐 DDL：create=草稿 0（原置 1 即全员可见）、publish 0/2→1（原置 2
  即撤下）、新增 /notice/revoke 1→2；严格转换拒绝 10402（条件 UPDATE 原子判定）
- 受众过滤：my-notices 按 target_type/target_ids SQL 过滤（USER 空/NULL 数组
  fail-closed）；read 前置可见性校验不可见统一 10401
- 可达性：管理面 7 端点 bootstrap apiRoutes+ADMIN_NOTICE 五档类型级授权
  （无资源投影、实例级无资源可挂）；my-notices/read Gateway 白名单四载体
  （yml/defaults/SecurityWebMvcConfig 豁免/ConfigTest 断言——双轨评审 P0
  处置：单载体断链恒 400）
- delete 级联清理 sys_user_notice；markNoticeAsRead ON CONFLICT 幂等 upsert；
  update UpdateEntity 显式列集（USER→ALL 真置空）；门禁序统一先判权
- 无存量结论（bootstrap 不种公告/无生产部署）；旧库重启 fail-fast 处置=重建库
  （runbook 登记）

测试：NoticeLifecyclePgIT 真权限链 2/2（白名单真转发形态+红跑两层实证：
旧实现 typed 数组 90001 拒收+旧逗号串 403 根因）；AccessBootstrapPgIT 计数
98/97/148/50；全量回归 -T 1C 含 E2E/heavy 全绿 0 失败